--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "auth"]
 	path = auth
 	url = git@github.com:yannyy/cso-auth.git
+[submodule "api-gateway"]
+	path = api-gateway
+	url = git@github.com:yannyy/cso-api-gateway.git
